--- a/.github/workflows/sample1.yml
+++ b/.github/workflows/sample1.yml
@@ -8,6 +8,8 @@ jobs:
     name: Set global env
     runs-on: ubuntu-latest
     steps:
+      - name: checkout
+        uses: actions/checkout@v2.0.0
       - name: get json param
         run: |
           politician_data=`cat ./aso.json`
