--- a/.github/workflows/sample1.yml
+++ b/.github/workflows/sample1.yml
@@ -45,5 +45,5 @@ jobs:
       - name: check file
         run: ls -l
       - name: read env
-          echo end..
+        run: echo end..
         
