--- a/.github/workflows/sample1.yml
+++ b/.github/workflows/sample1.yml
@@ -24,10 +24,10 @@ jobs:
           echo age = $age
           echo type = $type
           #-----debug-----#
-          echo "::set-output name=FIRST_NAME::${{first_name}}"
-          echo "::set-output name=LAST_NAME::${{last_name}}"
-          echo "::set-output name=AGE::${{age}}"
-          echo "::set-output name=TYPE::${{type}}"
+          echo "::set-output name=FIRST_NAME::$first_name"
+          echo "::set-output name=LAST_NAME::$last_name"
+          echo "::set-output name=AGE::$age"
+          echo "::set-output name=TYPE::$type"
         id: setting_param
       - name: get param and print settings
         run: |
