--- a/.github/workflows/sample1.yml
+++ b/.github/workflows/sample1.yml
@@ -33,10 +33,10 @@ jobs:
         run: |
           my_first_name=${{ steps.setting_param.outputs.FIRST_NAME }}
           echo my_first_name is $my_first_name
-
   job1:
     name: touch and echo
     runs-on: ubuntu-latest
+    needs: job0                       #job0の完了を待つ
     steps:
       - name: Checkout
         uses: actions/checkout@v2.0.0
@@ -45,5 +45,6 @@ jobs:
       - name: check file
         run: ls -l
       - name: read env
-        run: echo end..
-        
+        run: |
+          job1_first_name=${{ jobs.steps.setting_param.outputs.FIRST_NAME }}
+          echo job1_first_name is $job1_first_name
