--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,12 +12,13 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2.0.0
       - name: get json data
-        target_list=`cat ./hello-target.json`
-        TARGETS_LIST=`echo $(jq -r '.hello-target' <<< "$target_list")`
-        #-----debug-----#
-        echo TARGETS_LIST -> $TARGETS_LIST
-        #-----debug-----#
-        echo "::set-output name=TARGETS_HELLO_LIST::${{TARGETS_LIST}}"
+        run: |
+          target_list=`cat ./hello-target.json`
+          TARGETS_LIST=`echo $(jq -r '.hello-target' <<< "$target_list")`
+          #-----debug-----#
+          echo TARGETS_LIST -> $TARGETS_LIST
+          #-----debug-----#
+          echo "::set-output name=TARGETS_HELLO_LIST::${{TARGETS_LIST}}"
       - id: setting_targets
   exec:
     name: build (need target)
