--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,7 +15,8 @@ jobs:
         id: setting_targets
         run: |
           target_list=`cat ./hello-target.json`
-          TARGETS_LIST= `echo $(jq -r '.hello-target' <<< "$target_list")`
+          #TARGETS_LIST= `echo $(jq -r '.hello-target' <<< "$target_list")`
+          TARGETS_LIST= jq .hello-target <<< $target_list
           echo "::set-output name=TARGETS_HELLO_LIST::${{TARGETS_LIST}}"
   exec:
     name: build (need target)
