--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,6 +15,11 @@ jobs:
         id: setting_targets
         run: |
           target_list=`cat ./hello-target.json`
+          t_list= echo $(jq .hello-target <<< $target_list)
+          echo "::set-output name=TARGETS_HELLO_LIST::${{ t_list }}"
+          #TARGETS_LIST= `echo $(jq -r '.hello-target' <<< "$target_list")`
+          #t_list= jq .hello-target <<< $target_list
+          #echo "::set-output name=TARGETS_HELLO_LIST::${{t_list}}"
 
   exec:
     name: build (need target)
