--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -14,7 +14,7 @@ jobs:
       - name: get json data
         id: setting_targets
         run: |
-          target_list=`cat ./hello-target.json`
+          #target_list=`cat ./hello-target.json`
           t_list=$(jq .dummy -r ./hello-target.json)
           echo "::set-output name=TARGETS_HELLO_LIST::${{ t_list }}"
           #TARGETS_LIST= `echo $(jq -r '.hello-target' <<< "$target_list")`
