--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -14,12 +14,12 @@ jobs:
       - name: get json data
         id: setting_targets
         run: |
-          #target_list=`cat ./hello-target.json`
-          echo "t_list=${{ jq '.dummy -r' ./hello-target.json }}"
-          echo "::set-output name=TARGETS_HELLO_LIST::${{ t_list }}"
+          target_list=`cat ./hello-target.json`
+          #echo "t_list=${{ jq .dummy -r ./hello-target.json }}
+          #echo "::set-output name=TARGETS_HELLO_LIST::${{ t_list }}"
           #TARGETS_LIST= `echo $(jq -r '.hello-target' <<< "$target_list")`
           #t_list= jq .hello-target <<< $target_list
-          #echo "::set-output name=TARGETS_HELLO_LIST::${{t_list}}"
+          echo "::set-output name=TARGETS_HELLO_LIST::$(target_list | jq -r '.dummy')"
 
   exec:
     name: build (need target)
