--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -14,6 +14,7 @@ jobs:
       - name: get json data
         id: setting_targets
         run: |
+          apt-get install jq
           target_list=`cat ./hello-target.json`
           #echo "t_list=${{ jq .dummy -r ./hello-target.json }}
           #echo "::set-output name=TARGETS_HELLO_LIST::${{ t_list }}"
